# site2skill

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  index.html  pyproject.toml  robots.txt
.github/ISSUE_TEMPLATE/: config.yaml  site2skill_request.yaml
.github/workflows/: crawl-e2e.yaml  site2skill-hub.yaml
cmd/site2skillgo/: main.go
docs/en/getting-started/: index.html
docs/getting-started/: index.html
docs/ja/forbidden/: index.html
docs/ja/getting-started/: index.html
docs/ng/: index.html
docs/zh-tw/getting-started/: index.html
internal/converter/: converter.go
internal/fetcher/: fetcher.go  fetcher_test.go  locale.go  locale_test.go  robots.go
internal/normalizer/: normalizer.go  normalizer_test.go
internal/packager/: packager.go
internal/search/: search.go  types.go
internal/skillgen/: skillgen.go
internal/validator/: validator.go
scripts/: deploy-pages.sh
site/: index.html  server.go
site/.github/workflows/: pages-deploy.yaml
site2skill/: __init__.py  fetch_site.py  generate_skill_structure.py
